GitVersion1/objects/Cargill_Growth_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Is used for storing growth metrics related to an account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Growth Metrics</relationshipLabel>
        <relationshipName>Growth_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Full_Year_Tons_Goal__c</fullName>
        <description>it is used for storing full year tons goal value</description>
        <label>Full Year Tons Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Metrics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent growth metrics record used for storing header data</description>
        <label>Growth Metrics</label>
        <referenceTo>Cargill_Growth_Metrics__c</referenceTo>
        <relationshipLabel>Growth Metrics</relationshipLabel>
        <relationshipName>Growth_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pace_Percent__c</fullName>
        <formula>Pace__c * 100</formula>
        <label>Pace</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pace__c</fullName>
        <description>This field is used for storing pace value</description>
        <label>Pace</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>This field is used for storing product line values</description>
        <label>Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tons_Needed_to_Hit_Goal__c</fullName>
        <description>It is used for storing tons needed to hit the goal value</description>
        <label>Tons Needed to Hit Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Goal__c</fullName>
        <description>This field is used for storing YTD goal</description>
        <label>YTD Goal</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Tons__c</fullName>
        <description>This field is used for storing YTD Tons value</description>
        <label>YTD Tons</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Growth Metrics</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Growth Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>